--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: 3.26.0
-  service_manager:
-    path: ../service_manager
+  egg_manager:
+    path: ../egg_manager
   egg_network:
     path: ../egg_network
   launch:
-    path: ../launch
+    path: ../egg_launch
 
 dev_dependencies:
   flutter_test:
