--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -30,11 +30,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: 3.26.0
   egg_manager:
-    path: ../egg_manager
-  egg_network:
-    path: ../egg_network
+    git:
+      url: "git@github.com:TigerYao/egg_manager.git"
   launch:
-    path: ../egg_launch
+    git:
+      url: "git@github.com:TigerYao/egg_launch.git"
 
 dev_dependencies:
   flutter_test:
