--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   egg_manager:
-    git:
-      url: "https://github.com/TigerYao/egg_manager.git"
+    git: "https://github.com/TigerYao/egg_manager.git"
   launch:
-    git:
-      url: "https://github.com/TigerYao/egg_launch.git"
+    git: "https://github.com/TigerYao/egg_launch.git"
 
 dev_dependencies:
   flutter_test:
